# production_clicker

./: Cargo.toml
configurations/: recipes.json
src/: lib.rs  main.rs
src/processing/: mod.rs  recipe.rs  recipe_loader.rs
src/production/: resource.rs
