[package]
name = "production_clicker"
version = "0.1.0"
authors = ["Joshua Radin <jradn16@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = "0.3.0"
regex = "1.4"
serde = { version="1.0", features=["derive"] }
serde_json = "1.0"